@@ -24,11 +24,11 @@ import org.apache.wicket.model.LoadableDetachableModel;
  * @author Igor Vaynberg
  * 
  */
-public class DetachableContactModel extends LoadableDetachableModel
+public class DetachableContactModel extends LoadableDetachableModel<Contact>
 {
 	private static final long serialVersionUID = 1L;
-	
-	private long id;
+
+	private final long id;
 
 	protected ContactsDatabase getContactsDB()
 	{
@@ -58,9 +58,10 @@ public class DetachableContactModel extends LoadableDetachableModel
 	/**
 	 * @see java.lang.Object#hashCode()
 	 */
+	@Override
 	public int hashCode()
 	{
-		return new Long(id).hashCode();
+		return Long.valueOf(id).hashCode();
 	}
 
 	/**
@@ -69,6 +70,7 @@ public class DetachableContactModel extends LoadableDetachableModel
 	 * @see org.apache.wicket.markup.repeater.ReuseIfModelsEqualStrategy
 	 * @see java.lang.Object#equals(java.lang.Object)
 	 */
+	@Override
 	public boolean equals(final Object obj)
 	{
 		if (obj == this)
@@ -82,7 +84,7 @@ public class DetachableContactModel extends LoadableDetachableModel
 		else if (obj instanceof DetachableContactModel)
 		{
 			DetachableContactModel other = (DetachableContactModel)obj;
-			return other.id == this.id;
+			return other.id == id;
 		}
 		return false;
 	}
@@ -90,7 +92,8 @@ public class DetachableContactModel extends LoadableDetachableModel
 	/**
 	 * @see org.apache.wicket.model.LoadableDetachableModel#load()
 	 */
-	protected Object load()
+	@Override
+	protected Contact load()
 	{
 		// loads contact from the database
 		return getContactsDB().get(id);
